@@ -20,7 +20,6 @@ import uk.gov.hmcts.et.common.model.multiples.MultipleData;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import static com.google.common.base.Strings.isNullOrEmpty;
 import static uk.gov.hmcts.ecm.common.model.helper.Constants.ADDRESS_LABELS_COPIES_ERROR;
@@ -465,7 +464,7 @@ public class LabelsHelper {
                     .stream()
                     .filter(addressLabelTypeItem -> addressLabelTypeItem.getValue().getFullName() != null
                             || addressLabelTypeItem.getValue().getFullAddress() != null)
-                    .collect(Collectors.toList());
+                    .toList();
         }
 
         return selectedAddressLabels;
